# alpenrose

./: Cargo.toml  README.md  alpenrose.toml.example
src/: error.rs  main.rs
src/config/: mod.rs
src/mail/: mod.rs
src/pith/: mod.rs  state.rs
src/screen/: help.rs  main_menu.rs  message_index.rs  mod.rs
src/tui/: mod.rs
