[package]
name = "alpenrose"
version = "0.1.0"
edition = "2024"
description = "A Rust port of the Alpine email client"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
env_logger = "0.11.9"
log = "0.4.29"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.7"
